# Senior_Design_2018_AutoHEX

./: mavdar.launch  test.cpp
detect_avoid/: CMakeLists.txt  package.xml
detect_avoid/src/: main.cpp  test_flight.cpp
detect_avoid_files/: CMakeLists.txt  package.xml
detect_avoid_files/src/: avoid.cpp  detect.cpp  detect_avoid.cpp  test_flight.cpp
flight/: test_flight  test_flight.cpp
flight/detect_avoid_files/: CMakeLists.txt
flight/detect_avoid_files/src/: test_flight.cpp
