<?xml version="1.0"?>
<package>
  <name>detect_avoid</name>
  <version>1.3.0</version>
  <description>Copter obstacle detection and avoidance</description>

  <maintainer email="38jonesp@cua.edu">Patrick Jones</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>mavros</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rosconsole</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>mavros</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>

  </export>
</package>
