<?xml version="1.0"?>
<package>
  <name>detect_avoid</name>
  <version>1.4.0</version>
  <description>Copter obstacle detection and avoidance</description>

  <maintainer email="38jonesp@cua.edu">Patrick Jones</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>mavros</buildtool_depend>
  <run_depend>mavros</run_depend>
  <build_depend>rplidar_ros</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>

  </export>
</package>
